--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "firebase": "^8.6.3",
     "formik": "^2.2.9",
     "material-ui-icons": "^1.0.0-beta.36",
+    "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.5",
@@ -20,6 +21,7 @@
     "react-toastify": "^8.0.2",
     "redux": "^4.1.1",
     "redux-thunk": "^2.3.0",
+    "sass": "^1.42.1",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.3",
     "styled-components": "^5.3.1",
